Prevent Modal dragging on mobile

--- a/src/components/SettingsModal/Settings/Settings.module.scss
+++ b/src/components/SettingsModal/Settings/Settings.module.scss
@@ -8,8 +8,7 @@ $swatchSize: 50px;
   height: 75px;
   justify-content: center;
   overflow: auto;
-  padding: 5px;
-  width: 90%;
+  width: 100%;
 
   .swatch {
     border: 1px solid black;
