--- a/src/components/SettingsModal/SettingsModal.module.scss
+++ b/src/components/SettingsModal/SettingsModal.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   margin: auto;
-  width: 75%;
+  width: 65%;
 
   h1 {
     text-align: center;
